--- a/app/views/layouts/authentication.html.haml
+++ b/app/views/layouts/authentication.html.haml
@@ -1,22 +1,21 @@
--# coding: UTF-8
 !!! 5
 %html{:xmlns => "http://www.w3.org/1999/xhtml", :dir => t("i18n.dir"), :lang => t("i18n.iso2"), "xml:lang" => t("i18n.iso2"), :class => :authentication}
   %head
     %link{:rel => "icon", :type => "image/png", :href => image_path("favicon.png")}
-    =meta_viewport_tag
-    =title_tag
-    =csrf_meta_tags
-    =stylesheet_link_tag :application
-    =theme_link_tag(@current_theme)
-    =javascript_include_tag :application
+    = meta_viewport_tag
+    = title_tag
+    = csrf_meta_tags
+    = stylesheet_link_tag :application
+    = theme_link_tag
+    = javascript_include_tag :application
   %body
-    =yield :popover
+    = yield :popover
     #wrap
       #main
         #content
-          .logo=image_tag("ekylibre.png")
-          =notice
-          =alert
-          =notifications_tag
-          =yield
-    %footer#legals=legals_sentence
+          .logo= image_tag("ekylibre.png")
+          = notice
+          = alert
+          = notifications_tag
+          = yield
+    %footer#legals= legals_sentence
