--- a/app/views/backend/dashboards/production.html.haml
+++ b/app/views/backend/dashboards/production.html.haml
@@ -1,7 +1,7 @@
 =beehive(:production) do
   -hbox do
     -#cell :last_milk_result
-    -cell :product_bar
+    -cell :product_pie
     -cell :last_procedures
     -cell :last_products
   -tabbox do
