--- a/app/views/layouts/authentication.html.haml
+++ b/app/views/layouts/authentication.html.haml
@@ -1,13 +1,13 @@
 !!! 5
 %html{:xmlns => "http://www.w3.org/1999/xhtml", :dir => t("i18n.dir"), :lang => t("i18n.iso2"), "xml:lang" => t("i18n.iso2"), :class => :authentication}
   %head
-    %link{:rel => "icon", :type => "image/png", :href => image_path("favicon.png")}
-    = meta_viewport_tag
     = title_tag
     = csrf_meta_tags
-    = stylesheet_link_tag :application
+    = viewport_tag
+    = icon_tags
     = theme_link_tag
-    = javascript_include_tag :application
+    = stylesheet_link_tag :application, "data-turbolinks-track" => true
+    = javascript_include_tag :application, "data-turbolinks-track" => true
   %body
     = yield :popover
     #wrap
