--- a/app/views/layouts/backend.html.haml
+++ b/app/views/layouts/backend.html.haml
@@ -1,14 +1,13 @@
 !!! 5
 %html{:xmlns => "http://www.w3.org/1999/xhtml", 'xmlns:svg' => 'http://www.w3.org/2000/svg', 'xmlns:xlink' => 'http://www.w3.org/1999/xlink', :dir => t("i18n.dir"), :lang => t("i18n.iso2"), "xml:lang" => t("i18n.iso2"), :class => :backend}
   %head
-    %link{:rel => "icon", :type => "image/png", :href => image_path("favicon.png")}
-    = meta_viewport_tag
     = title_tag
     = csrf_meta_tags
-    = stylesheet_link_tag :application
+    = viewport_tag
+    = icon_tags
     = theme_link_tag
-    = javascript_include_tag :application
-    = javascript_include_tag "http://www.google.com/jsapi"
+    = stylesheet_link_tag :application, "data-turbolinks-track" => true
+    = javascript_include_tag :application, "data-turbolinks-track" => true
   - expiration = {}
   - expiration = {"timeout" => session[:expiration], "timeout-href" => renew_session_url(:user_name => current_user.user_name)} if current_user and session[:expiration].to_i > 0
   %body{:data => expiration}
