continue on general_ledger

--- a/app/views/backend/aggregators/_parameter.html.haml
+++ b/app/views/backend/aggregators/_parameter.html.haml
@@ -8,4 +8,4 @@
         = check_box_tag("#{parameter.name}[#{item.id}]", "1", checked)
         = item.name
 - else
-  - k.text(name)
+  - k.text(parameter.name)
