--- a/app/views/backend/aggregators/_parameter.html.haml
+++ b/app/views/backend/aggregators/_parameter.html.haml
@@ -1,11 +1,13 @@
 - if parameter.record_list?
   - k.criterion do
     %label= parameter.human_name
-    - for item in parameter.foreign_class.to_a
+    - for item in parameter.foreign_class.all
       %label
         - checked = !params[parameter.name][item.id.to_s].to_i.zero? rescue false
         = hidden_field_tag("#{parameter.name}[#{item.id}]", "0")
         = check_box_tag("#{parameter.name}[#{item.id}]", "1", checked)
         = item.name
+- elsif parameter.date?
+  - k.date(parameter.name)
 - else
   - k.text(parameter.name)
