--- a/app/views/backend/journal_entry_items/_row_form.html.haml
+++ b/app/views/backend/journal_entry_items/_row_form.html.haml
@@ -8,16 +8,16 @@
 %tr{:id=>id}
   %td=text_field_tag("items[#{id}][name]", item.name, :id=>"items_#{id}_name", "data-parameter-name"=>"name", "data-autofocus"=>(controller.controller_name.to_s == "journal_entries" ? "false" : "true"))
   %td=selector_tag "items[#{id}][account_id]", {:controller => :accounts, :action => :unroll}, :value=>item.account
-  %td.dec=text_field_tag "items[#{id}][original_debit]", (item.original_debit||0.0), :size=>10, :id=>"items_#{id}_original_debit", :class=>"original-debit", :href=>url_for(:controller=>:journal_entry_items, :action=>:new), "data-update"=>"#items", "data-update-at"=>:bottom, "data-type"=>:html, "data-add-item-unless"=>"#total", "data-with"=>"#items_#{id}_name,#entry-original-debit,#entry-original-credit,#journal_id,#journal_entry_printed_on", "data-exclusive-nullify"=>"#items_#{id}_original_credit"
+  %td.dec=text_field_tag "items[#{id}][real_debit]", (item.real_debit||0.0), :size=>10, :id=>"items_#{id}_real_debit", :class=>"original-debit", :href=>url_for(:controller=>:journal_entry_items, :action=>:new), "data-update"=>"#items", "data-update-at"=>:bottom, "data-type"=>:html, "data-add-item-unless"=>"#total", "data-with"=>"#items_#{id}_name,#entry-original-debit,#entry-original-credit,#journal_id,#journal_entry_printed_on", "data-exclusive-nullify"=>"#items_#{id}_real_credit"
   %td=@journal.currency
-  %td.dec=text_field_tag "items[#{id}][original_credit]", (item.original_credit||0.0), :size=>10, :id=>"items_#{id}_original_credit", :class=>"original-credit", :href=>url_for(:controller=>:journal_entry_items, :action=>:new), "data-update"=>"#items", "data-update-at"=>:bottom, "data-type"=>:html, "data-add-item-unless"=>"#total", "data-with"=>"#items_#{id}_name,#entry-original-debit,#entry-original-credit,#journal_id,#journal_entry_printed_on", "data-exclusive-nullify"=>"#items_#{id}_original_debit"
+  %td.dec=text_field_tag "items[#{id}][real_credit]", (item.real_credit||0.0), :size=>10, :id=>"items_#{id}_real_credit", :class=>"original-credit", :href=>url_for(:controller=>:journal_entry_items, :action=>:new), "data-update"=>"#items", "data-update-at"=>:bottom, "data-type"=>:html, "data-add-item-unless"=>"#total", "data-with"=>"#items_#{id}_name,#entry-original-debit,#entry-original-credit,#journal_id,#journal_entry_printed_on", "data-exclusive-nullify"=>"#items_#{id}_real_debit"
   %td=@journal.currency
   %td.act=link_to("labels.destroy".t, "#", "data-remove"=>"##{id}, ##{id}-errors", :class => "destroy")
 -if @financial_year and @journal and @journal.currency != @financial_year.currency
   %tr
     %td.dec{"colspan"=>2}
-    %td.dec.debit{"data-use"=>"#items_#{id}_original_debit,#journal_entry_original_currency_rate", "data-calculate"=>"mul"}
+    %td.dec.debit{"data-use"=>"#items_#{id}_real_debit,#journal_entry_real_currency_rate", "data-calculate"=>"mul"}
     %td=@financial_year.currency
-    %td.dec.credit{"data-use"=>"#items_#{id}_original_credit,#journal_entry_original_currency_rate", "data-calculate"=>"mul"}
+    %td.dec.credit{"data-use"=>"#items_#{id}_real_credit,#journal_entry_real_currency_rate", "data-calculate"=>"mul"}
     %td=@financial_year.currency
     %td.act
