add pie chart in production_dashboard and cultural_land_parcels

--- a/app/views/backend/cultivable_land_parcels/index.html.haml
+++ b/app/views/backend/cultivable_land_parcels/index.html.haml
@@ -10,3 +10,4 @@
             %path{:d => cultivable_land_parcel.shape_as_svg, :title => cultivable_land_parcel.name}
     -b.cell :list do
       =list
+    -b.cell :cropping_plan_on_cultivable_land_parcels
