--- a/app/views/backend/dashboards/production.html.haml
+++ b/app/views/backend/dashboards/production.html.haml
@@ -1,6 +1,6 @@
 = beehive(:production) do
   - hbox do
-    - cell :product_pie
+    - cell :cropping_plan
     - cell :last_procedures
     - cell :last_products
   - tabbox do
