--- a/app/views/backend/cells/cropping_plan_on_cultivable_land_parcels_cells/show.html.haml
+++ b/app/views/backend/cells/cropping_plan_on_cultivable_land_parcels_cells/show.html.haml
@@ -1,7 +1,7 @@
 - if @campaigns
   :ruby
     #
-    activities = Activity.of_campaign(@campaigns).of_families(:straw_cereal_crops, :maize_crops, :oilseed_crops, :protein_crops, :prairie, :fallow_land).order(:id)
+    activities = Activity.of_campaign(@campaigns).of_families(:vegetal_crops).order(:id)
             
     productions = Production.of_campaign(@campaigns).where(:static_support => true).order("activity_id, id")
 
