--- a/app/views/backend/cells/bank_chart_cells/show.html.haml
+++ b/app/views/backend/cells/bank_chart_cells/show.html.haml
@@ -1,30 +1,27 @@
 - if @financial_years
   :ruby
     #
-    activities = Activity.of_campaign(@campaigns).of_families(:vegetal_crops).order(:id)
-            
-    productions = Production.of_campaign(@campaigns).where(:static_support => true).order("activity_id, id")
-
-      if activities.count > 0 and productions.count > 0
-      
-        activities_serie = activities.collect do |activity|
-          { name: activity.name, y: activity.shape_area(@campaigns).to_s.to_f*0.0001, id: activity.id, color: cycle(*Backend::ChartsHelper::COLORS) }
-        end
-        
-        productions_serie = productions.collect do |production|
-          { name: production.name, y: production.shape_area.to_s.to_f*0.0001, id: production.id, color: ligthen(activities_serie.detect{|a| a[:id] == production.activity_id}[:color], 0.3) }
-        end
-        
-        cultivable_land_parcels_serie = CultivableLandParcel.of_campaign(@campaigns).of_production(productions).order("production_id, id").collect do |cultivable_land_parcel|
-          { name: cultivable_land_parcel.name, y: cultivable_land_parcel.shape_area.to_s.to_f*0.0001, color: ligthen(productions_serie.detect{|a| a[:id] == cultivable_land_parcel.supports.first.production_id}[:color], 0.3) }
-        end
-      end
+    cashes = Cash.all
+    
+    started_on = @financial_years.started_on
+    stopped_on = @financial_years.stopped_on
     
     series = []
-    series << {name: Activity.model_name.human, data: activities_serie, size: "50%", data_labels: {color: 'white', distance: -30} }
-    series << {name: Production.model_name.human, data: productions_serie, size: "75%", inner_size: "50%", data_labels: {enabled: false}}
-    series << {name: CultivableLandParcel.model_name.human, data: cultivable_land_parcels_serie, size: "80%", inner_size: "75%"}
+    categories = {}
+    date = started_on
+    while date < stopped_on
+      categories[date.year.to_s + date.month.to_s.rjust(2, '0')] = date.l(:format => "%b %Y") 
+      date = date >> 1
+    end
+    
+    for cash in cashes
+      items = cash.monthly_sums(started_on,stopped_on)
+      for cat in categories.keys
+        items[cat] ||= 0.0
+      end  
+      series << {name: cash.name ,data: items.collect{|k,v| v.to_s.to_f } }
+    end   
 
-  = pie_chart(series, tooltip: {point_format: '{point.y: 1.1f} Ha'}, title: @campaigns.map(&:name).to_sentence)
+  = line_chart(series, x_axis: { categories: categories.values})
 - else
   %strong= :no_data.tl
