add legend on bank_chart and begin method for bank_balance.

--- a/app/views/backend/cells/bank_chart_cells/show.html.haml
+++ b/app/views/backend/cells/bank_chart_cells/show.html.haml
@@ -22,6 +22,6 @@
       series << {name: cash.name ,data: items.collect{|k,v| v.to_s.to_f } }
     end   
 
-  = line_chart(series, x_axis: { categories: categories.values})
+  = line_chart(series,legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom', border_width: 0 }, x_axis: { categories: categories.values})
 - else
   %strong= :no_data.tl
