add last_entities tab in relationship dashboard.

--- a/app/views/backend/dashboards/relationship.html.haml
+++ b/app/views/backend/dashboards/relationship.html.haml
@@ -1,11 +1,6 @@
 =beehive do |b|
   -b.hbox do
-    -#b.cell :last_clients do
-      -for client in Entity.reorder("client DESC, updated_at DESC").limit(10)
-        %ul.list
-          =li_link_to(client.full_name, :controller => "backend/entities", :action => :show, :id => client.id)
-      -#=li_link_to tc('x_entities', :count => Entity.count), :controller => :entities, :action => :index
-
+    -b.cell :last_entities
     -if current_user.participations.count > 0
       -b.cell :future_events do
         =list(:my_future_events)
