--- a/app/views/backend/cells/collected_taxes_cells/show.html.haml
+++ b/app/views/backend/cells/collected_taxes_cells/show.html.haml
@@ -15,21 +15,21 @@
     end
 
     for tax in taxes
-      items_collected = tax.lasts_of_periods(started_on, stopped_on, method = :collected)
+      items_collected = tax.lasts_of_periods(started_on, stopped_on, mode = :collect)
       if items_collected.count > 0
         item_h = items_collected.sort.inject({}) do |hash, pair|
           hash[pair.printed_on.l(:format => "%b %Y")] = (pair.cumulated_absolute_debit - pair.cumulated_absolute_credit).to_d
           hash
         end
-        series << {name: tax.name + " " + Tax.human_attribute_name(:collected_taxes) ,data: item_h.collect{|k,v| v.to_s.to_f } }
+        series << {name: tax.name + " " + Tax.human_attribute_name(:collect_taxes) ,data: item_h.collect{|k,v| v.to_s.to_f } }
       end
-      items_paid = tax.lasts_of_periods(started_on, stopped_on, method = :paid)
+      items_paid = tax.lasts_of_periods(started_on, stopped_on, mode = :deduction)
       if items_paid.count > 0
         item_h = items_paid.sort.inject({}) do |hash, pair|
           hash[pair.printed_on.l(:format => "%b %Y")] = (pair.cumulated_absolute_debit - pair.cumulated_absolute_credit).to_d
           hash
         end
-        series << {name: tax.name + " " + Tax.human_attribute_name(:paid_taxes) ,data: item_h.collect{|k,v| v.to_s.to_f } }
+        series << {name: tax.name + " " + Tax.human_attribute_name(:deduction_taxes) ,data: item_h.collect{|k,v| v.to_s.to_f } }
       end
 
     end
