--- a/app/views/backend/sales/_item_fields.html.haml
+++ b/app/views/backend/sales/_item_fields.html.haml
@@ -2,14 +2,14 @@
 %tr.nested-fields
   %td
     .selector
-      = f.input_field(:product_id, 'data-selector' => url_for(:controller => :products, :action => :unroll), 'data-selector-new-item' => url_for(:action => :new, :controller => :products))
+      = f.input_field(:variant_id, 'data-selector' => url_for(:controller => :product_nature_variants, :action => :unroll), 'data-selector-new-item' => url_for(:action => :new, :controller => :product_nature_variants))
     - if item.errors.count > 0
       = item.errors.messages.inspect
   %td.decimal= f.input_field(:quantity, :size => 7, :class => "item-pta item-wta")
   %td
-    = f.input_field(:price_amount, :class => "item-pta item-wta")
+    = f.input_field(:unit_price_amount, :class => "item-pta item-wta")
   %td.decimal
-    = f.select(:tax_id, Tax.to_a.collect{|t| [t.name, t.id, {'data-rate' => (100.0 + t.amount).to_f/100.0}]}, {}, 'data-value' => 'rate', :class => "item-wta")
+    = f.select(:tax_id, Tax.all.collect{|t| [t.name, t.id, {'data-rate' => ((100 + t.amount)/100)}]}, {}, 'data-value' => 'rate', :class => "item-wta")
   %td.decimal.pta{'data-use' => ".item-pta", 'data-use-closest' => 'tr', 'data-calculate' => 'mul'}=item.pretax_amount
   %td.decimal.wta{'data-use' => ".item-wta", 'data-use-closest' => 'tr', 'data-calculate' => 'mul'}=item.amount
   %td.currency= @sale.currency
