update attributes (Entity, Sale and Activity)

--- a/app/views/backend/analytic_repartitions/_form.html.haml
+++ b/app/views/backend/analytic_repartitions/_form.html.haml
@@ -5,9 +5,6 @@
 
 =field_set(:analytics) do
   =f.referenced_association :production
-  =f.input :percentage
-  =f.input :description
-
-
+  =f.input :affectation_percentage
 
   
