--- a/app/views/backend/sales/_item_fields.html.haml
+++ b/app/views/backend/sales/_item_fields.html.haml
@@ -3,9 +3,13 @@
   %td
     .selector
       = f.input_field(:variant_id, 'data-selector' => url_for(:controller => :product_nature_variants, :action => :unroll), 'data-selector-new-item' => url_for(:action => :new, :controller => :product_nature_variants))
-    - if item.errors.count > 0
-      = item.errors.messages.inspect
+ 
   %td.decimal= f.input_field(:quantity, :size => 7, :class => "item-pta item-wta")
+  %td
+    = f.select(:indicator, SaleItem.indicator.options)
+  %td
+    .selector
+      = f.input_field(:price_id, 'data-selector' => url_for(:controller => :catalog_prices, :action => :unroll), 'data-selector-new-item' => url_for(:action => :new, :controller => :catalog_prices))
   %td
     = f.input_field(:unit_price_amount, :class => "item-pta item-wta")
   %td.decimal
