--- a/app/views/backend/product_natures/_form.html.haml
+++ b/app/views/backend/product_natures/_form.html.haml
@@ -1,50 +1,36 @@
-=field_set do
-  =f.input :name
-  =f.input :active
-  =f.input :variety
+= field_set do
+  = f.input :name
+  = f.input :active
+  = f.input :variety
 
-=field_set(:indicator) do
-  =f.input :abilities, :disabled => true
-  =f.input :indicators, :disabled => true
-  -#=f.referenced_association :category
-  -#input :nature, :show => {:subscription => :subscription}
+= field_set(:indicator) do
+  = f.input :abilities, :disabled => true
+  = f.input :indicators, :disabled => true
 
-=field_set(:nature) do
-  =f.input :reductible
-  =f.input :depreciable, :show => :asset_account_field_zone
-  =f.input :saleable, :show => :product_account_field_zone
-  =f.input :purchasable, :show => :charge_account_field_zone
-  -#=f.input :producible
-  =f.input :population_counting
-  -#=f.input :alive
-  -#=f.input :deliverable # , :show => :stock_options
-  =f.input :storable, :show => :stock_account_field_zone#, :show => :stocks, :in => :stock_options
-  -#=f.input :traceable
-  -#=f.input :storage
-  =f.input :subscribing, :show => :subscription
-  -#=f.input :towable
-  -#=f.input :tractive
+= field_set(:nature) do
+  = f.input :reductible
+  = f.input :depreciable, :show => :asset_account_field_zone
+  = f.input :saleable, :show => :sales
+  = f.input :purchasable, :show => :purchase
+  = f.input :population_counting
+  = f.input :storable, :show => :stock_account_field_zone
+  = f.input :subscribing, :show => :subscriptions
 
-=field_set(:subscriptions) do
-  =f.referenced_association :subscription_nature
-  =f.input :subscription_duration
-  -#input :duration
+= field_set(:subscriptions) do
+  = f.referenced_association :subscription_nature
+  = f.input :subscription_duration
 
+= field_set(:sales) do
+  = f.referenced_association :product_account
+  = f.association :sale_taxes
 
--#field_set :stocks, :in => :stock_options do
-  -#f.nested_association(:stocks) do
-    -#input :critic_quantity_min
-    -#input :quantity_min
-    -#input :quantity_max
-    -#association :building
+= field_set(:purchases) do
+  = f.referenced_association :charge_account
+  = f.association :purchase_taxes
 
--#price=render :partial=>'price_amount_form'
+= field_set(:accountancy) do
+  = f.referenced_association :asset_account, :wrapper_html => {:id => :asset_account_field_zone}
+  = f.referenced_association :stock_account, :wrapper_html => {:id => :stock_account_field_zone}
 
-=field_set(:accountancy) do
-  =f.referenced_association :asset_account, :wrapper_html => {:id => :asset_account_field_zone}
-  =f.referenced_association :product_account, :wrapper_html => {:id => :product_account_field_zone}#,     :source => :products
-  =f.referenced_association :charge_account, :wrapper_html => {:id => :charge_account_field_zone} #, :source => :charges
-  =f.referenced_association :stock_account, :wrapper_html => {:id => :stock_account_field_zone}
-
-=field_set(:variant) do
-  =f.nested_association(:variants)
+= field_set(:variant) do
+  = f.nested_association(:variants)
