--- a/app/views/backend/sales/_form.html.haml
+++ b/app/views/backend/sales/_form.html.haml
@@ -1,44 +1,45 @@
-=sale_steps
+= sale_steps
 
-=beehive do |b|
-  -b.tabbox do
-    -b.cell do
-      =f.referenced_association :client # , :source => :clients
-      =f.subset :addresses, :depend_on => :client
+= beehive do |b|
+  - b.tabbox do
+    - b.cell do
+      = f.referenced_association :client # , :source => :clients
+      = f.subset :addresses, :depend_on => :client
 
-    -b.cell :sales_conditions do
-      =f.association :nature, :as => :hidden
-      =f.referenced_association :responsible, :source => :employees, :new => {:employed => 1}
-      =f.referenced_association :transporter, :source => :transporters
-      =f.input :description
+    - b.cell :sales_conditions do
+      = f.association :nature, :as => :hidden
+      = f.referenced_association :responsible, :source => :employees, :new => {:employed => 1}
+      = f.referenced_association :transporter, :source => :transporters
+      = f.input :description
 
-    -b.cell :letter_options do
-      =f.input :letter_format, :show => :letter_options
-      =f.input :subject
-      =f.input :function_title
-      =f.input :introduction
-      =f.input :conclusion
-  -b.cell :items do
+    - b.cell :letter_options do
+      = f.input :letter_format, :show => :letter_options
+      = f.input :subject
+      = f.input :function_title
+      = f.input :introduction
+      = f.input :conclusion
+
+  - b.cell :items do
     -#=f.nested_association(:items)
     %table
       %thead
         %tr
-          %th=SaleItem.human_attribute_name(:product)
-          %th=SaleItem.human_attribute_name(:quantity)
-          %th=SaleItem.human_attribute_name(:price) # Custom price
-          %th=SaleItem.human_attribute_name(:tax) # Custom price
-          %th=SaleItem.human_attribute_name(:pretax_amount)
-          %th=SaleItem.human_attribute_name(:amount)
-          %th=SaleItem.human_attribute_name(:currency)
+          %th= SaleItem.human_attribute_name(:variant)
+          %th= SaleItem.human_attribute_name(:quantity)
+          %th= SaleItem.human_attribute_name(:price) # Custom price
+          %th= SaleItem.human_attribute_name(:tax) # Custom price
+          %th= SaleItem.human_attribute_name(:pretax_amount)
+          %th= SaleItem.human_attribute_name(:amount)
+          %th= SaleItem.human_attribute_name(:currency)
           %th
       %tbody#items
-        =f.simple_fields_for :items, @sale.items do |item|
-          =render 'item_fields', :f => item
+        = f.simple_fields_for :items, @sale.items do |item|
+          = render 'item_fields', :f => item
       %tfoot
         %tr.total
-          %td=link_to_add_association "add_item".tl, f, :items, :partial => 'item_fields', 'data-association-insertion-node' => '#items', 'data-association-insertion-method' => :append, :class => "btn"
-          %th{:colspan => 3}="total".tl
-          %td#pta.decimal{'data-use' => '.pta', 'data-calculate' => 'sum'}=@sale.pretax_amount
-          %td#wta.decimal{'data-use' => '.wta', 'data-calculate' => 'sum'}=@sale.amount
-          %td=@sale.currency
+          %td= link_to_add_association "add_item".tl, f, :items, :partial => 'item_fields', 'data-association-insertion-node' => '#items', 'data-association-insertion-method' => :append, :class => "btn"
+          %th{:colspan => 3}= "total".tl
+          %td#pta.decimal{'data-use' => '.pta', 'data-calculate' => 'sum'}= @sale.pretax_amount
+          %td#wta.decimal{'data-use' => '.wta', 'data-calculate' => 'sum'}= @sale.amount
+          %td= @sale.currency
           %th
