working on OutgoingDelivery (in progress)

--- a/app/views/backend/outgoing_deliveries/_form.html.haml
+++ b/app/views/backend/outgoing_deliveries/_form.html.haml
@@ -1,12 +1,29 @@
--# TODO Manage  extra content in forms
-=sale_steps(@outgoing_delivery.sale)
+-
 
-=field_set do
-  -# TODO: Manage filtered source with column
-  =f.referenced_association :address, :new => {:entity_id => @outgoing_delivery.sale.client_id}
-  =f.referenced_association :mode
-  =f.input :received_at
-  =f.referenced_association :transporter, :source => :transporters, :new => {:transporter => 1}
-
-=field_set :outgoing_delivery_items do
-  = render 'items_form'
+= beehive do |b|
+  - b.tabbox do
+    - b.cell do
+      = f.referenced_association :recipient
+      = f.referenced_association :mode
+      = f.input :sent_at
+      
+    - b.cell do
+      = f.referenced_association :address#, :new => {:entity_id => @outgoing_delivery.sale.client_id}
+    
+    - b.cell do
+      = f.referenced_association :sale
+      
+  - b.cell :outgoing_delivery_items do
+    %table
+      %thead
+        %tr
+          %th= OutgoingDeliveryItem.human_attribute_name(:product)
+          %th= OutgoingDeliveryItem.human_attribute_name(:quantity)
+          %th
+      %tbody#items
+        = f.simple_fields_for :items, @outgoing_delivery.items do |item|
+          = render 'item_fields', :f => item
+      %tfoot
+        %tr.total
+          %td= link_to_add_association "add_item".tl, f, :items, :partial => 'item_fields', 'data-association-insertion-node' => '#items', 'data-association-insertion-method' => :append, :class => "btn"
+          %th
