--- a/app/views/backend/outgoing_deliveries/index.html.haml
+++ b/app/views/backend/outgoing_deliveries/index.html.haml
@@ -1,5 +1,8 @@
 =kujaku do |k|
   -k.text
-  -k.radio :unconfirmed, :confirmed, .to_a, :i18n_root=>"labels.criterion_modes."
+  -k.radio :unconfirmed, :confirmed, :all, :i18n_root=>"labels.criterion_modes."
+
+=main_toolbar do |t|
+  -t.new
 
 =list
